Fix line-spacing overcrowding long h1 elements

--- a/public/styles.css
+++ b/public/styles.css
@@ -26,6 +26,7 @@ h1 {
     font-family: 'streetbomber';
     font-size: 3.5rem;
     letter-spacing: 0.2rem;
+    line-height: 4rem;
 }
 
 h2 {
